src/objects/Manifest1__c.object
<CustomObject>
    <fields>
        <fullName>Commit__c</fullName>
        <description>The commit reference from the CVS that is associated with this manifest</description>
        <inlineHelpText>Commit reference ID associated with this manifest</inlineHelpText>
        <label>Commit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DestinationOwnerId__c</fullName>
        <formula>Destination__r.OwnerId</formula>
        <label>DestinationOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationType__c</fullName>
        <label>DestinationType</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Status__c</fullName>
        <description>Returns the status of the manifest&apos;s destination. Created to use in filtering a report.</description>
        <formula>TEXT( Destination__r.Status__c )</formula>
        <label>Destination Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipName>Change_Sets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotifyNewOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyNewOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginId__c</fullName>
        <formula>Origin__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OriginId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Origin</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipName>Change_Sets3</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Change_Set__c</referenceTo>
        <relationshipName>Manifests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X80_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to indicate that the changes in the manifest have at least 80% test coverage.</inlineHelpText>
        <label>80% Coverage</label>
        <type>Checkbox</type>
    </fields>
    <label>Manifest1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manifests1</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>